# KlipschRemote

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  build_app.bat  build_app.ps1  build_app.sh  build_app_linux.bat  capture_screenshots.bat  installer.iss  klipsch_remote.bat  pyproject.toml  pytest.ini  requirements.txt  serve_web.bat
.github/workflows/: build-linux.yml  build.yml  pages.yml  release.yml  tests.yml
klipsch_ble/: FIRMWARE_PROTOCOL.md  README.md  __init__.py  __main__.py  cli.py  client.py  constants.py  discovery.py  models.py  winrt_backend.py
klipsch_remote/: README.md  __init__.py  __main__.py  _demo.py  app.py  autostart.py  controls.py  lifecycle.py  screens.py  single_instance.py  theme.py  tray.py  viewstate.py  widgets.py
klipsch_remote/assets/: make_icon.py
packaging/: main.py  pyproject.toml
tests/: test_autostart.py  test_cli_helpers.py  test_cli_resolve.py  test_client.py  test_constants.py  test_discovery.py  test_gui_logic.py  test_models.py  test_screens.py  test_viewstate.py  test_web_behavior.py  test_web_parity.py  test_winrt_backend.py
tools/: capture_screenshots.bat  capture_screenshots.ps1  serve_web.bat
web/: CNAME  README.md  app.js  index.html  klipsch.js  manifest.json  robots.txt  sitemap.xml  styles.css  sw.js
